--- a/token/contract/Move.toml
+++ b/token/contract/Move.toml
@@ -1,9 +1,11 @@
 [package]
-name = "usdt"
+name = "usdc"
 version = "0.0.0"
 
 [dependencies]
-MoveStdlib = { git = "https://github.com/move-language/move.git", subdir = "language/move-stdlib", rev = "main" }
+AptosStdlib = { git = "https://github.com/aptos-labs/aptos-core.git", subdir = "aptos-move/framework/aptos-stdlib", rev = "main" }
 
 [addresses]
+std = "0x1"
+aptos_std = "0x1"
 NamedAddr =  "_"
