--- a/tokenswap/v2/contract/Move.toml
+++ b/tokenswap/v2/contract/Move.toml
@@ -3,7 +3,7 @@ name = "swap"
 version = "0.0.0"
 
 [dependencies]
-AptosFramework = { git = "https://github.com/aptos-labs/aptos-core.git", subdir = "aptos-move/framework/aptos-framework", rev = "main" }
+AptosFramework = { git = "https://github.com/aptos-labs/aptos-core.git", subdir = "aptos-move/framework/aptos-framework", rev = "devnet" }
 
 [addresses]
 NamedAddr =  "_"
