--- a/token-in-native/contract/Move.toml
+++ b/token-in-native/contract/Move.toml
@@ -3,7 +3,7 @@ name = "usdt"
 version = "0.0.0"
 
 [dependencies]
-MoveStdlib = { git = "https://github.com/move-language/move.git", subdir = "language/move-stdlib", rev = "main" }
+MoveStdlib = { git = "https://github.com/move-language/move.git", subdir = "language/move-stdlib", rev = "devnet" }
 
 [addresses]
 std = "0x1"
