--- a/token-in-native/contract/Move.toml
+++ b/token-in-native/contract/Move.toml
@@ -3,8 +3,7 @@ name = "usdt"
 version = "0.0.0"
 
 [dependencies]
-MoveStdlib = { git = "https://github.com/move-language/move.git", subdir = "language/move-stdlib", rev = "devnet" }
+AptosFramework = { git = "https://github.com/aptos-labs/aptos-core.git", subdir = "aptos-move/framework/aptos-framework", rev = "devnet" }
 
 [addresses]
-std = "0x1"
 NamedAddr =  "_"
