--- a/token/contract/Move.toml
+++ b/token/contract/Move.toml
@@ -1,6 +1,7 @@
 [package]
 name = "usdc"
 version = "0.0.0"
+upgrade_policy = "compatible"
 
 [dependencies]
 AptosFramework = { git = "https://github.com/aptos-labs/aptos-core.git", subdir = "aptos-move/framework/aptos-framework", rev = "devnet" }
