--- a/tokenswap/v1/contract/Move.toml
+++ b/tokenswap/v1/contract/Move.toml
@@ -1,6 +1,7 @@
 [package]
 name = "swap"
 version = "0.0.0"
+upgrade_policy = "compatible"
 
 [dependencies]
 AptosFramework = { git = "https://github.com/aptos-labs/aptos-core.git", subdir = "aptos-move/framework/aptos-framework", rev = "main" }
